[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/interface/hud/Minimap.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/menu/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/editor/EditorHUD.gd" type="Script" id=4]
[ext_resource path="res://graphics/themes/wesnoth_theme.tres" type="Theme" id=6]
[ext_resource path="res://graphics/styles/panel.tres" type="StyleBox" id=7]

[node name="EditorHUD" type="CanvasLayer" groups=[
"EditorHUD",
]]
layer = 2
script = ExtResource( 4 )

[node name="Minimap" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = 25.0
margin_right = -17.0
margin_bottom = -875.0

[node name="TileButtons" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -265.0
margin_top = 250.0
margin_bottom = 1.0
theme = ExtResource( 6 )
custom_styles/panel = ExtResource( 7 )

[node name="GridContainer" type="GridContainer" parent="TileButtons"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIButtons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -90.0
margin_right = 300.0
margin_bottom = -10.0
rect_min_size = Vector2( 600, 80 )
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UIButtons"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
margin_right = -1.0
margin_bottom = -5.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewMapButton" type="Button" parent="UIButtons/HBoxContainer"]
margin_left = 69.0
margin_right = 149.0
margin_bottom = 69.0
rect_min_size = Vector2( 80, 0 )
text = "New"

[node name="MapNameLineEdit" type="LineEdit" parent="UIButtons/HBoxContainer"]
margin_left = 169.0
margin_right = 329.0
margin_bottom = 69.0
rect_min_size = Vector2( 160, 0 )
focus_mode = 1
context_menu_enabled = false
placeholder_text = "scenario name"

[node name="SaveButton" type="Button" parent="UIButtons/HBoxContainer"]
margin_left = 349.0
margin_right = 429.0
margin_bottom = 69.0
rect_min_size = Vector2( 80, 0 )
text = "Save"

[node name="LoadMapButton" type="Button" parent="UIButtons/HBoxContainer"]
margin_left = 449.0
margin_right = 529.0
margin_bottom = 69.0
rect_min_size = Vector2( 80, 0 )
text = "Load"

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
visible = false
